--- a/trunk/demo/index.htm
+++ b/trunk/demo/index.htm
@@ -1,27 +1,58 @@
 <html>
 <head>
 <script type="text/javascript" src="script/jquery-1.4.4.min.js"></script>
-<script type="text/javascript" src="script/asciimation-plugin.js"></script>
+<script type="text/javascript" src="script/jquery.asciimation-0.1.js"></script>
 <script type="text/javascript">
 
   $(function() {
     $("#animation").asciimation({
       'frameClass' : 'frame',
-      'framesPerSecond' : 10,
+      'framesPerSecond' : 25,
       'removeSourceFrames' : true
     });
-    $("#animation").asciimation("start").css("border", "1px red solid");
-    setTimeout(function() {$("#animation").asciimation("stop")}, 3000);
-    setTimeout(function() {$("#animation").asciimation("start")}, 5000);
+    $("<div/>").text("Starting").appendTo("#log");
+    $("#animation").asciimation("start");
+    setTimeout(function() { $("#animation").asciimation("stop"); $("<div/>").text("Stopping").appendTo("#log"); }, 1500);
+    setTimeout(function() { $("#animation").asciimation("start"); $("<div/>").text("Starting (will run forever)").appendTo("#log"); }, 3000);
   });
 </script>
 </head>
 <body>
 
+<h1>Helicopter example</h1>
+
+Below is an example of using the jquery asciimation plugin.
+
+<h2>Animated ASCII art</h2>
+
 <div id="animation"></div>
-<span class="frame">--</span>
-<span class="frame">/</span>
-<span class="frame">|</span>
-<span class="frame">\</span>
+<span class="frame">
+___.___
+  (_]===*
+  o 0
+</span>
+<span class="frame">
+ __.__
+  (_]===*
+  o 0
+</span>
+<span class="frame">
+  _._
+  (_]===*
+  o 0
+</span>
+<span class="frame">
+   .
+  (_]===*
+  o 0
+</span>
+<span class="frame">
+ __.__
+  (_]===*
+  o 0
+</span>
+
+<div id="log"/>
+
 </body>
 </html>
